solid/src/main/java/org/example/O/ej1/Bad/Addition.java
package org.example.O.ej1.Bad;

public class Addition implements CalculateOperation {

}
